# woolcano-ise

./: CMakeLists.txt  Contributors.txt  LICENSE.txt  README.txt  doxygen.cfg
benchmarks/: CMakeLists.txt  LISTING.txt  Makefile.common  README.txt  enable_llvm_toolflow.cmake  profile_all.pl
benchmarks/adpcm/: CMakeLists.txt  Makefile  timing.c
benchmarks/aes/: CMakeLists.txt  Makefile  aes_test.cpp  aesopt.h
benchmarks/blowfish/: CMakeLists.txt  Makefile  bf.c  bf_cfb64.c  bf_locl.h  blowfish_test.c
benchmarks/cjpeg/: CMakeLists.txt  Makefile  jchuff.c  jcphuff.c  test
benchmarks/cjpeg/input1/: input_small.ppm
benchmarks/fft/: CMakeLists.txt  Makefile  fft.c  main.c
benchmarks/md5/: CMakeLists.txt  Makefile  md5_test.c
benchmarks/sha/: CMakeLists.txt  Makefile  sha_test.c
benchmarks/sor/: CMakeLists.txt  Makefile  main.c  sor.c
benchmarks/whetstone/: CMakeLists.txt  Makefile  whetstone.c
cmake/: add_llvm_support.cmake  create_ise_pass_test.cmake.in  create_ise_pass_tests.cmake  enable_ise_targets.cmake  enable_llvm_toolflow.cmake
cmake/examples/: enable_llvm_toolflow_example.cmake
docs/: doxygen.cfg
docs/notes/: cmake.txt  graphs.txt  linux-installation.txt  profiling.txt  running.txt  xcode.txt
examples/: README.txt
examples/bb_info/autoconf/: AutoRegen.sh  aclocal.m4
examples/bb_info/lib/: Makefile
examples/dotBB/: .gitignore  INSTALL.txt  Makefile.common  README.txt
examples/dotBB/autoconf/: configure.ac
examples/dotBB/include/: DataFlowGraph.h
examples/ir/: est.sh  vis.sh
examples/ise_dots/sor/: SOR_execute.bb.nph13_cand_0.gv  SOR_execute.bb1_cand_0.gv  SOR_execute.bb1_cand_1.gv  SOR_execute.bb1_cand_2.gv  SOR_execute.bb6_cand_0.gv  SOR_execute.entry_cand_0.gv  SOR_execute.entry_cand_2.gv  main.bb1.i_cand_0.gv  main.bb2.i_cand_1.gv  main.bb3_cand_1.gv
examples/loop/: make_full.sh  parse.pl
ise/: CMakeLists.txt
ise/include/: AlgoMaxMiso.h  AlgoMultipleCuts.h  AlgoSingleCut.h  AlgoUnion.h  Architecture.h  ArchitectureVirtexFx.h  ArchitectureVirtual.h  Benchmark.h  DataFlowGraph.h  InstructionSelection.h  IseAlgorithm.h  Primitives.h  RuntimeEstimation.h  SelectionAlgorithm.h  SelectionMethod1.h  SelectionRandom.h  Types.h  Util.h  dynamic_bitset.hpp
ise/lib/: CMakeLists.txt
ise/lib/BitcodeStatistics/: BitcodeStatistics.cpp  CMakeLists.txt
ise/lib/ISEPass/: CMakeLists.txt  ISEPass.cpp
ise/lib/common/: AlgoMaxMiso.cpp  AlgoMultipleCuts.cpp  AlgoSingleCut.cpp  AlgoUnion.cpp  Architecture.cpp  ArchitectureVirtexFx.cpp  ArchitectureVirtual.cpp  Benchmark.cpp  CMakeLists.txt  DataFlowGraph.cpp  IseAlgorithm.cpp  Primitives.cpp  RuntimeEstimation.cpp  SelectionMethod1.cpp  SelectionRandom.cpp  Util.cpp
misc-tools/: README.txt
misc-tools/bb_info/: Makefile.common  README.txt  configure
misc-tools/bb_info/autoconf/: configure.ac
misc-tools/cgi-browser/: htmlize.pl  index.pl  parse.pl  visualize  webdot
misc-tools/cgi-browser/obsolete/: listing  show_dot  text
misc-tools/dotBB/include/: Types.h
misc-tools/dotBB/lib/: Makefile
misc-tools/ir/: Makefile  main.cc
misc-tools/ise_dots/sor/: SOR_execute.bb2_cand_0.gv  SOR_execute.bb2_cand_1.gv  SOR_execute.bb5.preheader.preheader_cand_0.gv  SOR_execute.bb5.preheader_cand_0.gv  SOR_execute.bb6_cand_1.gv  SOR_execute.entry_cand_1.gv  main.bb1.i_cand_1.gv  main.bb1_cand_0.gv  main.bb1_cand_1.gv  main.bb1_cand_2.gv  main.bb2.i_cand_0.gv  main.bb2.i_cand_2.gv  main.bb2.i_cand_3.gv  main.bb3_cand_0.gv  main.bb4.i_cand_0.gv
misc-tools/loop/: Makefile  README.txt  main.cc  make.sh
misc-tools/results-tools/: README.txt  compile-all.sh  excel-spreadsheet.pl  gen-cmd-lst.sh  histogram.sh  histogram1.sh  histogram2.pl  make.sh  make_bench.sh  parse_log.pl  res-rm-not-finished.sh  results-col.sh  run-all-bench.sh  run-all.sh  threads-resume.sh
results/: README.txt  res-apps-histogram.txt  res-apps-histogram.xlsx  res-fe-opt.xlsx
results/res-ident-algo/: README.txt
results/res-ident-algo-1h/: plot-algo.cmd  plot-results.sh
results/res-ident-algo-1h/i2-o1/: ident-multicut-adpcm.txt  ident-multicut-aes.txt  ident-multicut-blowfish.txt  ident-multicut-cjpeg.txt  ident-multicut-fft.txt  ident-multicut-md5.txt  ident-multicut-sha.txt  (+20 more)
(+354 files in other folders)
